last message show nav - fix rightmoune menu overflow window

--- a/src/layouts/DefaultLayout/index.css
+++ b/src/layouts/DefaultLayout/index.css
@@ -297,6 +297,14 @@ li {
   list-style: none;
 }
 
+#wrapper .not-use svg {
+  color: var(--icon-hover-bg) !important;
+}
+
+#Wrapper .hidden-icon-none-uses .anticon svg {
+  color: var(--icon-hover-bg) !important;
+}
+
 #wrapper {
   position: relative;
 }
